--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     },
     "dependencies": {
         "@apollo/client": "^3.12.11",
+        "alignment-viewer-2": "^2.0.0-beta-23",
         "graphql": "^16.10.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "overrides": {
+        "alignment-viewer-2": {
+            "react": "$react",
+            "react-dom": "$react-dom"
+        }
     },
     "devDependencies": {
+        "css-loader": "^7.1.2",
         "karma": "6.4.0",
         "karma-chrome-launcher": "3.1.1",
         "karma-cljs-test": "0.1.0",
         "karma-junit-reporter": "2.0.1",
-        "shadow-cljs": "2.26.2"
+        "mini-css-extract-plugin": "^2.9.2",
+        "sass": "^1.85.1",
+        "sass-loader": "^16.0.5",
+        "shadow-cljs": "2.26.2",
+        "style-loader": "^4.0.0",
+        "webpack-cli": "^6.0.1"
     }
 }
