--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@apollo/client": "^3.12.11",
+        "detect-element-resize": "^0.0.2",
         "graphql": "^16.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
