--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
     "name": "unknown-client",
+    "type": "module",
     "scripts": {
         "ancient": "clojure -Sdeps '{:deps {com.github.liquidz/antq {:mvn/version \"RELEASE\"}}}' -m antq.core",
         "watch": "npx shadow-cljs watch app browser-test karma-test",
@@ -10,11 +11,13 @@
     "dependencies": {
         "@apollo/client": "^3.12.11",
         "detect-element-resize": "^0.0.2",
+        "gosling.js": "^1.0.2",
         "graphql": "^16.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@vitejs/plugin-react": "^4.3.4",
         "css-loader": "^7.1.2",
         "karma": "6.4.0",
         "karma-chrome-launcher": "3.1.1",
@@ -25,6 +28,7 @@
         "sass-loader": "^16.0.5",
         "shadow-cljs": "2.26.2",
         "style-loader": "^4.0.0",
+        "vite": "^6.2.1",
         "webpack-cli": "^6.0.1"
     }
 }
