--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
         "gosling.js": "^1.0.2",
         "graphql": "^16.10.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "vega-embed": "^6.29.0"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.4",
