--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,9 @@
         "ci": "npx shadow-cljs compile karma-test && npx karma start --single-run --reporters junit,dots"
     },
     "dependencies": {
-        "@apollo/client": "^3.12.11",
+        "bootstrap": "^4.1.3",
         "detect-element-resize": "^0.0.2",
         "gosling.js": "^1.0.2",
-        "graphql": "^16.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "vega-embed": "^6.29.0"
