--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,27 @@ networks:
   unknown:
 
 volumes:
-  unknown-db-data-2:
+  # unknown-db-data-2:
   mongo-db-data:
 
 services:
-  unknown-db:
-    restart: unless-stopped
-    image: neo4j:5.26.1
-    hostname: unknown-db
-    environment:
-      - NEO4J_AUTH=none
-      - NEO4J_HOME=/var/lib/neo4j
-      - NEO4J_server_memory_heap_max__size=4G
-      - NEO4J_dbms_memory_transaction_total_max=4G
-    volumes:
-      - unknown-db-data-2:/data
-#      - ./csv:/var/lib/neo4j/import:rw
-    ports:
-      - 127.0.0.1:7474:7474
-      - 127.0.0.1:7687:7687
-    networks:
-      - unknown
+#   unknown-db:
+#     restart: unless-stopped
+#     image: neo4j:5.26.1
+#     hostname: unknown-db
+#     environment:
+#       - NEO4J_AUTH=none
+#       - NEO4J_HOME=/var/lib/neo4j
+#       - NEO4J_server_memory_heap_max__size=4G
+#       - NEO4J_dbms_memory_transaction_total_max=4G
+#     volumes:
+#       - unknown-db-data-2:/data
+# #      - ./csv:/var/lib/neo4j/import:rw
+#     ports:
+#       - 127.0.0.1:7474:7474
+#       - 127.0.0.1:7687:7687
+#     networks:
+#       - unknown
       
   mongo-db:
     restart: unless-stopped
@@ -35,14 +35,14 @@ services:
     networks:
       - unknown
       
-  unknown-graphql-api:
-    restart: unless-stopped
-    image: unknown-graphql-api
-    hostname: unknown-graphql-api
-    ports:
-      - 127.0.0.1:4000:4000
-    environment:
-      - NODE_ENV=development
-    command: ["node", "index.js", "neo4j://unknown-db:7687"]
-    networks:
-      - unknown
+  # unknown-graphql-api:
+  #   restart: unless-stopped
+  #   image: unknown-graphql-api
+  #   hostname: unknown-graphql-api
+  #   ports:
+  #     - 127.0.0.1:4000:4000
+  #   environment:
+  #     - NODE_ENV=development
+  #   command: ["node", "index.js", "neo4j://unknown-db:7687"]
+  #   networks:
+  #     - unknown
