--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "dependencies": {
         "3dmol": "^2.4.2",
         "chroma-js": "^3.1.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "prop-types": "^15.8.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-vega": "7.4.4",
+        "vega": "5.20.0",
+        "vega-canvas": "1.2.6",
+        "vega-embed": "6.12.2",
+        "vega-lite": "5.1.0",
+        "vega-util": "1.16.0"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.4",
